--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,7 +6,11 @@
                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
   version="3.0"
   metadata-complete="true">
-
+ 
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  
   <display-name>Welcome to Tomcat</display-name>
   <description>
      Welcome to Tomcat
@@ -20,6 +24,17 @@
   <servlet-mapping>
      <servlet-name>userController</servlet-name>
      <url-pattern>/user</url-pattern>
+  </servlet-mapping>
+  
+  
+    <servlet>
+     <servlet-name>indexController</servlet-name>
+     <servlet-class>com.ssf.web.IndexController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+     <servlet-name>indexController</servlet-name>
+     <url-pattern>/index</url-pattern>
   </servlet-mapping>
   
 
