--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -26,8 +26,8 @@
      <url-pattern>/user</url-pattern>
   </servlet-mapping>
   
-  
-    <servlet>
+  <!--  -->
+  <servlet>
      <servlet-name>indexController</servlet-name>
      <servlet-class>com.ssf.web.IndexController</servlet-class>
   </servlet>
@@ -36,6 +36,14 @@
      <servlet-name>indexController</servlet-name>
      <url-pattern>/index</url-pattern>
   </servlet-mapping>
+  <!-- 商品 -->
+  <servlet>
+     <servlet-name>productController</servlet-name>
+     <servlet-class>com.ssf.web.ProductController</servlet-class>
+  </servlet>
   
-
+  <servlet-mapping>
+     <servlet-name>productController</servlet-name>
+     <url-pattern>/product</url-pattern>
+  </servlet-mapping>
 </web-app>
