事务 连接池 缓存

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -8,9 +8,9 @@ jdbc.password=123456
 jdbc.fetch_size=50
 
 #Druid Connection Pool
-druid.pool.size.init=1
-druid.pool.size.min=3
-druid.pool.size.max=20
+druid.pool.init=1
+druid.pool.minIdle=3
+druid.pool.maxActive=20
 jdbc.testSql=SELECT 'x' FROM DUAL
 
 
