--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,14 @@
 			<version>1.2.3</version>
 		</dependency>
 		<!-- mybatis end -->
+		
+		<!--  -->	
+		<dependency>
+		    <groupId>org.mybatis.generator</groupId>
+		    <artifactId>mybatis-generator-maven-plugin</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		
     <!-- WEB依赖包 -->
 	<dependency>
 	    <groupId>javax.servlet</groupId>
@@ -224,7 +232,7 @@
 			<version>2.7.4</version>
 	</dependency>
 		
-		
+
 		
 	<!-- JSoup解析HTML文件 -->
     <dependency>
