--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
+.DS_Store
+*/.DS_Store
 
 target/
 target/*
-
-demo/
-demo/*
-
 .settings/
 .settings/*
-
 .classpath
 .project
+velocity.log
 
+src/main/webapp/WEB-INF/lib/
+src/main/webapp/WEB-INF/lib/*
