--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
 	    <artifactId>dom4j</artifactId>
 	    <version>1.6.1</version>
 	</dependency>
+	<dependency>  
+    	<groupId>xml-apis</groupId>  
+    	<artifactId>xml-apis</artifactId>  
+    	<version>1.4.01</version>  
+	</dependency> 
 		
 	<!-- JSoup解析HTML文件 -->
     <dependency>
